fix: incorrect slider overflow

--- a/src/styles/common/_base.scss
+++ b/src/styles/common/_base.scss
@@ -25,6 +25,4 @@ body {
 .content-wrapper {
   max-inline-size: 1276px;
   margin-inline: auto;
-
-  overflow: hidden;
 }
